[package]
name = "pumpkin_voice"
version = "0.1.0"
edition = "2021"

[lib] 
crate-type = ["cdylib"]

[dependencies]
# pumpkin = { path = "../pumpkin/pumpkin" } 
# pumpkin-data = { path = "../pumpkin/pumpkin-data" }
# pumpkin-util = { path = "../pumpkin/pumpkin-util" }
# pumpkin-api-macros = { path = "../pumpkin/pumpkin-api-macros" }
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-data" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

# A rust asynchronous runtime
tokio = { version = "1.48", features = ["full"] }
# Logging
tracing = "0.1.44"
# Crypto
aes-gcm = "0.10"
rand = "0.8"
# UUID
uuid = { version = "1.10", features = ["v4"] }
# Bytes
bytes = "1.7"
byteorder = "1.5"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[profile.release] 
lto = true